Quarkus based app docker file mods