@@ -1,14 +1,15 @@
 FROM adoptopenjdk/openjdk11
 
-RUN mkdir -p /app/target
+RUN mkdir -p /app/lib/
 RUN cd /app
 
 RUN ls -lrt /app/
-COPY target/ /app/target/
-RUN ls -lrt /app/target/*jar
+COPY target/lib/* /app/lib/
+COPY target/getting-started-1.0-SNAPSHOT-runner.jar /app/
+RUN ls -lrt /app/*jar
 
 WORKDIR /app
 
 EXPOSE 8080 
 
-CMD ["java", "--patch-module", "java.base=target/libs/alpn-boot-8.1.6.v20151105.jar", "--add-exports", "java.base/org.eclipse.jetty.alpn=ALL-UNNAMED", "-jar", "target/getting-started-*-SNAPSHOT.jar"]
+CMD ["java", "-jar", "getting-started-1.0-SNAPSHOT-runner.jar"]
